added our character's index html
wrote the HTML and added a favicon and the footer element

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Nami</title>
+        <link rel="icon" href="https://i.pinimg.com/564x/e7/3a/2b/e73a2b23c1b235c7bbdaee4387727a26.jpg">
     </head>
     <body>
         <!-- header element-->
@@ -25,7 +26,13 @@
                 <li>Place of origin: Marai Village, Mount Targon</li>
                 <li>Weapon(s): Tidecaller Staff Tidecaller Staff, Water Magic Water Magic</li>
             </ul>
-        
         </main>
+
+        <!-- Footer element -->
+        <footer>
+            <p>This site was created during a <a target="_blank" href="https://taptapkaboom.com" >Tap Kaboom</a> class.
+                &copy; Made
+            </p>
+        </footer>
     </body>
 </html>
