--- a/index.html
+++ b/index.html
@@ -1,38 +1,55 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Nami</title>
-        <link rel="icon" href="https://i.pinimg.com/564x/e7/3a/2b/e73a2b23c1b235c7bbdaee4387727a26.jpg">
-    </head>
-    <body>
-        <!-- header element-->
-        <header>
-            <img src="https://i.pinimg.com/564x/e7/3a/2b/e73a2b23c1b235c7bbdaee4387727a26.jpg">
-            <h1>Nami: The Tidecaller</h1>
-        </header>
 
-        <!-- main element-->
-        <main>
-            <h2>About Nami</h2>
-            <p>A headstrong young vastaya of the seas, 
-                Nami uses her mystical Tidecaller staff to reshape the tides and defend her fellow Marai from danger.<br>
-                The first of her kind to leave the ocean and venture onto dry land, Nami faces the unthinkable with grit, 
-                determination, and daring mettle.</p>
-            <img src="https://64.media.tumblr.com/eba3eb63082b27c42898dcb2654c3428/44f7f11f8299494e-d9/s640x960/b8f8e46b0c8e6a98525131a1709abfd55179aaa3.gif">
-        
-            <h2>Characteristics</h2>
-            <ul>
-                <li>Species: Marai</li>
-                <li>Place of origin: Marai Village, Mount Targon</li>
-                <li>Weapon(s): Tidecaller Staff Tidecaller Staff, Water Magic Water Magic</li>
-            </ul>
-        </main>
+<head>
+    <title>Nami</title>
+    <link rel="icon" href="https://i.pinimg.com/564x/e7/3a/2b/e73a2b23c1b235c7bbdaee4387727a26.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gabriela&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/hero.css">
+</head>
 
-        <!-- Footer element -->
-        <footer>
-            <p>This site was created during a <a target="_blank" href="https://taptapkaboom.com" >Tap Kaboom</a> class.
-                &copy; Made
-            </p>
-        </footer>
-    </body>
+<body>
+    <!-- header element-->
+    <header>
+        <img src="https://i.pinimg.com/564x/e7/3a/2b/e73a2b23c1b235c7bbdaee4387727a26.jpg">
+        <h1>Nami: The Tidecaller</h1>
+    </header>
+
+    <!-- main element-->
+    <main>
+        <h2>About Nami</h2>
+        <p>A headstrong young vastaya of the seas,
+            Nami uses her mystical Tidecaller staff to reshape the tides and defend her fellow Marai from danger.<br>
+            The first of her kind to leave the ocean and venture onto dry land, Nami faces the unthinkable with grit,
+            determination, and daring mettle.</p>
+        <img
+            src="https://64.media.tumblr.com/eba3eb63082b27c42898dcb2654c3428/44f7f11f8299494e-d9/s640x960/b8f8e46b0c8e6a98525131a1709abfd55179aaa3.gif">
+
+        <h2>Characteristics</h2>
+        <ol>
+            <li>Species: Marai</li>
+            <li>Place of origin: Marai Village, Mount Targon</li>
+            <li>Weapon(s): Tidecaller Staff Tidecaller Staff, Water Magic Water Magic</li>
+        </ol>
+
+        <h2>Nami's Friends</h2>
+        <p>Nami has some awesome friends. She's a incredible friend. <br>
+        Click on the links below to read more about them.</p>
+        <ol>
+            <li> <a target="_blank" href="https://www.leagueoflegends.com/en-us/champions/fizz/">Fizz</a> </li>
+            <li> <a target="_blank" href="https://leagueoflegends.fandom.com/wiki/Chum_the_Waters_(Legends_of_Runeterra)#02BW046T2">Longtooth</a> </li>
+            <li> <a target="_blank" href="https://leagueoflegends.fandom.com/wiki/Marai_Greatmother_(Legends_of_Runeterra)">Greatmother</a></li>
+        </ol>
+    </main>
+
+    <!-- Footer element -->
+    <footer>
+        <p>This site was created during a <a target="_blank" href="https://taptapkaboom.com">Tap Kaboom</a> class.
+            &copy; Made
+        </p>
+    </footer>
+</body>
+
 </html>
