css file modifications
change the background header for a background img

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gabriela&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/hero.css">
+    <link rel="stylesheet" href="https://i.pinimg.com/564x/66/a3/c7/66a3c72b6c385c10b26b784f92d2df46.jpg">
 </head>
 
 <body>
